--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
         <div class="infophoto">
             <div class="photo">
-                <img src="code HTML/fille2.jpg" alt="my_photo" />
+                <img src="code HTML/fille2.jpg" alt="ma_photo" />
             </div>
             <div class="info">
                 <h2 class="nom">Nisrine Ed-debbarhi</h2>
